--- a/index.html
+++ b/index.html
@@ -13,9 +13,18 @@
             padding: 50px;
             margin: 0;
         }
+        .message {
+            font-size: 20px;
+            color: #f39c12;
+            margin-bottom: 20px;
+        }
     </style>
 </head>
 <body>
+    <div class="message">
+        To continue, please allow notifications.
+    </div>
+
     <!-- Firebase Scripts -->
     <script type="module">
         import { initializeApp } from "https://www.gstatic.com/firebasejs/11.3.1/firebase-app.js";
