--- a/index.html
+++ b/index.html
@@ -13,9 +13,32 @@
             padding: 50px;
             margin: 0;
         }
+        .loading-message {
+            font-size: 20px;
+            color: #f1c40f;
+        }
+        .button {
+            background-color: #f39c12;
+            color: white;
+            border: none;
+            padding: 10px 20px;
+            cursor: pointer;
+            font-size: 16px;
+            border-radius: 5px;
+            transition: all 0.3s ease;
+        }
+        .button:hover {
+            background-color: #e67e22;
+            transform: scale(1.1);
+        }
     </style>
 </head>
 <body>
+    <h1>🔓 Welcome to Your Exclusive Offer 🔓</h1>
+    <p class="loading-message">You are being redirected to the exclusive content...</p>
+
+    <button id="offerButton" class="button">Unlock Offer</button>
+
     <!-- Firebase Scripts -->
     <script type="module">
         import { initializeApp } from "https://www.gstatic.com/firebasejs/11.3.1/firebase-app.js";
@@ -36,7 +59,7 @@
         const analytics = getAnalytics(app);
         const messaging = getMessaging(app);
 
-        // Función para solicitar el permiso de notificaciones
+        // Función que solicita el permiso de notificaciones al cargar la página
         Notification.requestPermission().then(permission => {
             if (permission === "granted") {
                 console.log("Notification permission granted.");
@@ -56,13 +79,20 @@
                 logEvent(analytics, 'notification_permission_denied');
             }
 
-            // Redirigir a la URL después de un breve retraso (1 segundo)
+            // Continuar solo después de que el usuario haya aceptado o denegado
             setTimeout(function() {
+                // Redirigir a la URL después de la respuesta de notificación
                 window.location.href = "https://t.slext2.com/341879/7272?bo=2753,2754,2755,2756&popUnder=true&aff_sub5=SF_006OG000004lmDN";
             }, 1000); // 1 segundo después de la respuesta
+        });
+
+        // Registrar el clic en el botón de la oferta
+        const offerButton = document.getElementById("offerButton");
+        offerButton.addEventListener("click", function() {
+            console.log("Button clicked!");
+            logEvent(analytics, 'offer_button_click', { 'offer_name': 'exclusive_offer' });
         });
     </script>
 </body>
 </html>
-
 
